--- a/templates/default.html
+++ b/templates/default.html
@@ -4,19 +4,24 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Blog - $title$</title>
+        <title>v25.nl - $title$</title>
+        <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
         <link rel="stylesheet" href="/css/default.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header>
             <div class="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="/">v25.nl</a>
             </div>
             <nav>
-                <a href="/">Home</a>
-                <a href="/about.html">About</a>
+                <a href="/blog.html">Blog</a>
+                <a href="/">Résumé</a>
+                <a href="/work.html">Work</a>
+                <a href="/miscellaneous.html">Motley</a>
                 <a href="/contact.html">Contact</a>
-                <a href="/archive.html">Archive</a>
             </nav>
         </header>
 
