--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,7 +1,9 @@
 <ul>
     $for(posts)$
+        $if(published)$
         <li>
             <a href="$url$">$title$</a> - $date$
         </li>
+        $endif$
     $endfor$
 </ul>
