Add a few more post drafts

--- a/templates/default.html
+++ b/templates/default.html
@@ -7,9 +7,10 @@
         <title>v25.nl - $title$</title>
         <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
         <link rel="stylesheet" href="/css/default.css" />
+        <link rel="stylesheet" href="/css/syntax.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
