--- a/templates/default.html
+++ b/templates/default.html
@@ -18,8 +18,7 @@
                 <a href="/">v25.nl</a>
             </div>
             <nav>
-                <a href="/blog.html">Blog</a>
-                <a href="/">Résumé</a>
+                <!-- <a href="/blog.html">Blog</a> -->
                 <a href="/work.html">Work</a>
                 <a href="/miscellaneous.html">Motley</a>
                 <a href="/contact.html">Contact</a>
