--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,6 +1,6 @@
 <ul>
     $for(posts)$
-        $if(published)$
+        $if(published && true)$
         <li>
             <a href="$url$">$title$</a> - $date$
         </li>
